# language-qux

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  language-qux.cabal  stack.yaml
examples/factorial/: factorial.qux  fmt.qux
examples/fibonacci/: fibonacci.qux
examples/gcd/: fmt_c.c  gcd.qux
examples/head/: head.qux
examples/helloWorld/: fmt.qux  fmt_c.c  helloWorld.qux  helloWorld_c.c
examples/sum/: sum.qux
examples/tail/: tail.qux
src/Data/String/: Extra.hs
src/Language/Qux/: Ast.hs  Context.hs  Exception.hs  Interpreter.hs  Lexer.hs  Parser.hs  PrettyPrinter.hs  Syntax.hs  TypeChecker.hs  Util.hs  Version.hs
src/Language/Qux/Annotated/: Exception.hs  NameResolver.hs  Parser.hs  PrettyPrinter.hs  Simplify.hs  Syntax.hs  TypeChecker.hs  TypeResolver.hs
src/Language/Qux/Llvm/: Builder.hs  Compiler.hs  Generator.hs
src/Text/PrettyPrint/: Extra.hs
test/: Main.hs
