name:           language-qux
version:        0.0.0.0

author:         Henry J. Wylde
maintainer:     public@hjwylde.com
homepage:       https://github.com/qux-lang/language-qux

synopsis:       Utilities for working with the Qux language
-- description:

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Qux, Language
build-type:     Simple

library
    hs-source-dirs: src/
    exposed-modules:
        Language.Qux.Annotated.PrettyPrinter,
        Language.Qux.Annotated.Simplify,
        Language.Qux.Annotated.Syntax,
        Language.Qux.Exception,
        Language.Qux.Interpreter,
        Language.Qux.Parser,
        Language.Qux.PrettyPrinter,
        Language.Qux.Syntax,
        Language.Qux.TypeChecker,
        Language.Qux.Version
    other-modules:
        Language.Qux.Lexer

    default-language: Haskell2010
    build-depends:
        base >= 4.8 && < 5,
        containers == 0.5.*,
        either == 4.*,
        indents >= 0.3.3 && < 0.4,
        mtl == 2.*,
        parsec == 3.*,
        pretty == 1.*

