name:           language-qux
version:        0.2.0.0

author:         Henry J. Wylde
maintainer:     hjwylde@gmail.com
homepage:       https://github.com/hjwylde/language-qux

synopsis:       Utilities for working with the Qux language
description:    Qux is an experimental language developed from the ground up with the aim of static
                compile time verification. This package provides tools for working with it (parsing,
                compiling, pretty printing and type checking).

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Qux, Language
build-type:     Simple

extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type:       git
    location:   git@github.com:hjwylde/language-qux

library
    hs-source-dirs: src/
    exposed-modules:
        Language.Qux.Annotated.Exception
        Language.Qux.Annotated.NameResolver
        Language.Qux.Annotated.Parser
        Language.Qux.Annotated.Syntax
        Language.Qux.Annotated.TypeChecker
        Language.Qux.Annotated.TypeResolver
        Language.Qux.Context
        Language.Qux.Llvm.Compiler
        Language.Qux.Syntax
        Language.Qux.Version
    other-modules:
        Language.Qux.Lexer
        Language.Qux.Llvm.Builder
        Language.Qux.Llvm.Generator
        Paths_language_qux
        Text.PrettyPrint.Extra

    default-language: Haskell2010
    other-extensions:
        DeriveFunctor,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        MultiParamTypeClasses,
        TemplateHaskell
    build-depends:
        base == 4.9.*,
        containers == 0.5.*,
        extra == 1.5.*,
        indents == 0.4.*,
        lens == 4.15.*,
        llvm-hs-pure == 4.1.*,
        mtl == 2.2.*,
        parsec == 3.1.*,
        pretty == 1.1.*,
        transformers == 0.5.*
